--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,11 +4,11 @@ phases:
   install:
     commands:
       - echo Installing dependencies...
-      - yum install -y java-11-openjdk-devel maven
+      - yum install -y java-17-openjdk-devel maven
   build:
     commands:
       - echo Build started on `date`
-      - mvn clean install -DskipTests 
+      - mvn clean package 
   post_build:
     commands:
       - echo Build completed on `date`
