--- a/appspec.yml
+++ b/appspec.yml
@@ -7,5 +7,6 @@ hooks:
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
+  ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
