--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /home/ec2-user
 hooks:
   BeforeInstall:
-    - 'rm /opt/codedeploy-agent/deployment-root/deployment-logs/codedeploy-agent-deployments.log'
+    - 'sudo rm /opt/codedeploy-agent/deployment-root/deployment-logs/codedeploy-agent-deployments.log'
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
