--- a/appspec.yml
+++ b/appspec.yml
@@ -4,9 +4,9 @@ files:
   - source: /target/
     destination: /home/ec2-user
 hooks:
- # BeforeInstall:
-  #  - 'rm -f /opt/codedeploy-agent/deployment-root/deployment-logs/codedeploy-agent-deployments.log'
-   #    runas: root
+ BeforeInstall:
+    - 'rm /opt/codedeploy-agent/deployment-root/deployment-logs/codedeploy-agent-deployments.log'
+      runas: root
   AfterInstall:
     - location: scripts/install_dependencies.sh
       timeout: 300
