--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - mvn clean install -DskipTests 
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed on- `date`
       - ls target/
 
 artifacts:
